# agri_dms

./: agri_dms_documentation.md  package.json  pyproject.toml  requirements.txt  setup.py
agri_dms/: demo_data.py  hooks.py  modules.txt  setup_roles.py
agri_dms/agri_dms/: setup_roles.py
agri_dms/agri_dms/doctype/commission_ledger/: commission_ledger.json
agri_dms/agri_dms/doctype/commission_payout/: commission_payout.json
agri_dms/agri_dms/doctype/commission_scheme/: commission_scheme.json
agri_dms/agri_dms/doctype/commission_slab/: commission_slab.json
agri_dms/agri_dms/doctype/customer_sale/: customer_sale.json
agri_dms/agri_dms/doctype/distributor/: distributor.json
agri_dms/agri_dms/doctype/distributor_manufacturer_mapping/: distributor_manufacturer_mapping.json
agri_dms/agri_dms/doctype/distributor_purchase_order/: distributor_purchase_order.json
agri_dms/agri_dms/doctype/distributor_stock/: distributor_stock.json
agri_dms/agri_dms/doctype/distributor_target/: distributor_target.json
agri_dms/agri_dms/doctype/goods_receipt_note/: goods_receipt_note.json
agri_dms/agri_dms/doctype/grn_item/: grn_item.json
agri_dms/agri_dms/doctype/machine/: machine.json
agri_dms/agri_dms/doctype/machine_category/: machine_category.json
agri_dms/agri_dms/doctype/manufacturer/: manufacturer.json
agri_dms/agri_dms/doctype/payout_entry/: payout_entry.json
agri_dms/agri_dms/doctype/po_item/: po_item.json
agri_dms/erpnext_bridge/: doctype_sync.py
agri_dms/fixtures/: role.json
agri_dms/public/: build.json
agri_dms/workspace/agri_dms/: agri_dms.json
(+17 files in other folders)
