[project]
name = "agri_dms"
authors = [
    { name = "Agri-DMS Team", email = "admin@agri-dms.com" }
]
description = "Distributor Management System"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agri_dms*"]
